# simpleGals

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: bandit.yml  ci.yml  codeql.yml  publish.yml  sca.yml
docs/: Makefile  conf.py  index.md  installation.md  make.bat
docs/superpowers/plans/: 2026-04-25-core-cli.md  2026-04-25-sgui-tui.md  2026-07-08-v0.3.0-features.md  2026-07-09-simplegals-0.3.1-cover-manifest.md  2026-07-09-simplegals-0.4.0-template-extensibility.md  2026-07-10-simplegals-code-analysis-ci.md
docs/superpowers/specs/: 2026-04-25-architecture-design.md  2026-07-09-simplegals-demo-site-design.md  2026-07-09-simplegals-org-transfer-runbook.md
simplegals/: __init__.py  cli.py
simplegals/core/: archive.py  config.py  exif.py  gallery.py  metadata.py  processor.py  template.py
simplegals/template/: item.html.j2  page.html.j2  style.css
simplegals/tui/: __init__.py  __main__.py  app.py  file_panel.py  preview_panel.py  progress_bar.py  state.py
simplegals/workers/: pool.py  progress.py
tests/: conftest.py  test_archive.py  test_cli.py  test_config.py  test_exif.py  test_gallery.py  test_metadata.py  test_processor.py  test_template.py  test_tui_state.py  test_tui_widgets.py  test_workers.py
