[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplegals"
version = "0.1.1"
description = "A simple command-line static HTML image gallery generator with a TUI setup utility"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tim Case", email = "tim@lnx.cx" }
]
requires-python = ">=3.10"
dependencies = [
    "term-image",
    "bitmath>=2.0.0",
    "jinja2",
    "piexif",
    "pillow",
    "urwid",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "build",
    "twine",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autobuild",
]

[project.scripts]
simpleGals = "simplegals.cli:main"
sgui = "simplegals.tui:main"

[project.urls]
Repository = "https://github.com/timlnx/simpleGals"

[tool.hatch.build.targets.wheel]
packages = ["simplegals"]
