[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplegals"
dynamic = ["version"]
description = "A simple command-line static HTML image gallery generator with a TUI setup utility"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tim Case", email = "tim@lnx.cx" }
]
requires-python = ">=3.10"
dependencies = [
    "term-image",
    "bitmath>=2.0.0",
    "jinja2",
    "piexif",
    "pillow",
    "urwid",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "build",
    "twine",
    "pylint",
    "pycodestyle",
    "bandit",
    "pip-audit",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autobuild",
]

[project.scripts]
simpleGals = "simplegals.cli:main"
sgui = "simplegals.tui:main"

[project.urls]
Repository = "https://github.com/simpleGals/simpleGals"

[tool.hatch.version]
path = "VERSION"
pattern = '(?P<version>.+)'

[tool.hatch.build.targets.wheel]
packages = ["simplegals"]

[tool.pylint.main]
py-version = "3.10"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
# Fix-first is the rule (see CLAUDE.md); these are the documented exceptions
# where a clean fix would be unreasonable. Everything else is fixed in code.
disable = [
    # Trivial helpers, __init__, and urwid widget methods; the meaningful
    # public functions are documented. Module and class docstrings are kept.
    "missing-function-docstring",
    # Complexity thresholds on the build pipeline and TUI widgets: these
    # aggregate related state and read linearly. Refactoring purely to satisfy
    # the counts adds regression risk to tested code without fixing a defect.
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-statements",
    "too-many-branches",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-few-public-methods",
    # Intentional patterns kept on purpose:
    "broad-exception-caught",     # workers/TUI degrade gracefully on any failure
    "protected-access",           # urwid framework integration
    "invalid-overridden-method",  # urwid's selectable() API
]
